index.css
body {
    margin: 0;
    padding: 0;
    border: 0;
}

#header-part {
    width: 100%;
    height: 100vh;
    background-color: antiquewhite;
}

#header {
    height: 7vh;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.header-title {
    font-size: 3rem;
}

.header-link a {
    margin-right: 2em;
}

#header a {
    text-decoration: none;
}

.header-title-and-text {
    width: 100%;
    margin-top: 7em;
    text-align: center;
}

.header-title-and-text h2 {
    line-height: .2rem;
    font-size: 3rem;
}

.explore-btn {
    margin-top: 20px;
    border: 0;
    padding: 10px;
    background-color: orange;
    color: white;
    font-size: 1.2srem;
    font-weight: 800;
    border-radius: 3px;
}

#header-part img {
    width: 100%;
    margin: 30px 0;
}

/* Features css code here */

.features {
    margin: 200px 40px 80px 40px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 30px;
}

.features-image-group {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 10px;
    grid-area: item1;
}

.features-text {
    margin-top: 130px;
    grid-area: item2;
}

.features-text h1 {
    font-size: 3rem;
}

.features-text span {
    color: orange;
}

.second-btn {
    margin: 0;
}

/* Loving Features */

.loving-features {
    margin: 0 20px 100px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 30px;
}


.loving-features-heading h1 {
    font-size: 3rem;
    border-left: 5px solid orange;
}

.loving-features-item {
    margin-bottom: 20px;
    padding: 20px;
    background-color: rgb(251, 253, 255);
    box-shadow: 3px 3px 3px aliceblue, 5px 5px 4px whitesmoke, 3px 3px 1px gainsboro;
}

.some-facts {
    margin-left: 20px;
}

.some-facts h1 {
    font-size: 3rem;
    margin-bottom: 0;
}

/* achievement box */

.achievement {
    margin: 40px 70px 120px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
}

.achievement-item {
    text-align: center;
    border: 2px solid orange;
    border-radius: 5px;
    padding: 5px;
    line-height: 0;
}

/* Sponsor ship item */
.sponsor {
    margin-bottom: 100px;
}

.sponsor-text {
    text-align: center;
}

.sponsor-text h1 {
    font-size: 3rem;
    margin-bottom: 0;
    color: orange;
}

.sponsor-item {
    text-align: center;
}

.sponsor-item img {
    margin-left: 4em;
}

/* footer part */

footer {
    margin: 0 10%;
    background-color: antiquewhite;
    border-radius: 10px;
}

footer p {
    padding: 20px;
    text-align: center;
}

@media screen and (max-width:480px) and (min-width:320px) {
    body {
        margin: 0;
        padding: 4px;
        border: 0;
    }
    
    #header-part {
        width: 100%;
        height: 80vh;
        background-color: antiquewhite;
    }

    .header-title-and-text {
        width: 100%;
        margin-top: 7em;
        text-align: center;
    }

    .header-title-and-text h2 {
        line-height: 0.2rem;
        font-size: 2rem;
    }

    .explore-btn {
        margin-top: 10px 0;
        border: 0;
        padding: 10px;
        background-color: rgb(255, 173, 22);
        color: white;
        font-size: 0.8rem;
        font-weight: 800;
        border-radius: 3px;
    }

    #header-part img {
        width: 100%;
        margin-top: 30px;
        margin-bottom: 0;
    }

    .features {
        margin: 100px 10px;
        display: grid;
        grid-template-areas: "item2"
            "item1";
        grid-gap: 30px;
    }

    .features-image-group {
        width: 100%;
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        grid-gap: 10px;
        grid-area: item1;
    }

    .features-text {
        width: 100%;
        margin-top: 0;
        grid-area: item2;
    }

    .features-text h1 {
        width: 100%;
        font-size: 1.5rem;
    }

    .loving-features {
        width: 100%;
        margin: 0 0 100px 0;
        display: grid;
        grid-template-columns: 1fr;
        grid-gap: 30px;
    }

    .loving-features-heading h1 {
        font-size: 1.5rem;
        border-left: 2px solid orange;
    }

    .loving-features-item {
        margin-bottom: 20px;
        padding: 20px;
        background-color: rgb(251, 253, 255);
        box-shadow: 3px 3px 3px aliceblue, 5px 5px 4px whitesmoke, 3px 3px 1px gainsboro;
    }

    .loving-features-image img {
        width: 100%;
        height: auto;
    }

    .some-facts {
        margin: 0;
        text-align: center;
    }

    .some-facts h1 {
        font-size: 3rem;
        margin-bottom: 0;
    }

    .achievement {
        margin: 10px;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 20px;
    }

    .achievement-item {
        text-align: center;
        border: 2px solid orange;
        border-radius: 5px;
        padding: 5px;
        line-height: 0;
    }

    .sponsor {
        margin-bottom: 50px;
    }

    .sponsor-text {
        text-align: center;
    }

    .sponsor-text h1 {
        font-size: 2rem;
        margin-bottom: 0;
        color: orange;
    }

    .sponsor-item {
        display: grid;
        grid-template-columns: 1fr;
        justify-items: center;
        gap: 20px;
    }

    .sponsor-item img {
        margin:0;
    }

}

